// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deletes child element 1`] = `
"import * as React from 'react';

const Component = () => (
  <div>
    
  </div>
);

export default Component;
"
`;

exports[`deletes element with no parent 1`] = `
"import * as React from 'react';

const Component = () => null;

export default Component;
"
`;

exports[`throws Fault if element at cursor is not found 1`] = `
Fault {
  "data": Object {
    "cursorLocation": Object {
      "columnNumber": 7,
      "fileName": "/Users/I0459/scratch/personal/beragi/server/#/services/deleteElement/__fixtures__/1.tsx",
      "lineNumber": 3,
    },
  },
  "level": 0,
  "message": "Element not found at cursor",
  "stack": "Error
    at new Fault (/Users/I0459/scratch/personal/beragi/server/#/common/models/Fault/index.ts:11:18)
    at MergeMapSubscriber.rxjs_1.of.pipe.operators_1.concatMap.sourceFileNode [as project] (/Users/I0459/scratch/personal/beragi/server/#/services/deleteElement/index.ts:18:11)
    at MergeMapSubscriber.Object.<anonymous>.MergeMapSubscriber._tryNext (/Users/I0459/scratch/personal/beragi/server/node_modules/rxjs/src/internal/operators/mergeMap.ts:135:21)
    at MergeMapSubscriber.Object.<anonymous>.MergeMapSubscriber._next (/Users/I0459/scratch/personal/beragi/server/node_modules/rxjs/src/internal/operators/mergeMap.ts:125:12)
    at MergeMapSubscriber.Object.<anonymous>.Subscriber.next (/Users/I0459/scratch/personal/beragi/server/node_modules/rxjs/src/internal/Subscriber.ts:99:12)
    at Observable._subscribe (/Users/I0459/scratch/personal/beragi/server/node_modules/rxjs/src/internal/observable/scalar.ts:5:16)
    at Observable.Object.<anonymous>.Observable._trySubscribe (/Users/I0459/scratch/personal/beragi/server/node_modules/rxjs/src/internal/Observable.ts:231:19)
    at Observable.Object.<anonymous>.Observable.subscribe (/Users/I0459/scratch/personal/beragi/server/node_modules/rxjs/src/internal/Observable.ts:212:14)
    at MergeMapOperator.Object.<anonymous>.MergeMapOperator.call (/Users/I0459/scratch/personal/beragi/server/node_modules/rxjs/src/internal/operators/mergeMap.ts:100:19)
    at Observable.Object.<anonymous>.Observable.subscribe (/Users/I0459/scratch/personal/beragi/server/node_modules/rxjs/src/internal/Observable.ts:207:25)",
}
`;
